--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name cloud-kiosk;
+    server_name mj-hack-stack;
 
     location / {
         proxy_set_header X-Forwarded-Host $host;
