--- a/{{cookiecutter.project_slug}}/docker-compose.yml
+++ b/{{cookiecutter.project_slug}}/docker-compose.yml
@@ -12,17 +12,21 @@ services:
 
   frontend:
     build:
-      context: ./frontend
+      context: frontend
       dockerfile: Dockerfile
     volumes:
-      - ./frontend/app:/app/app
-      - ./frontend/public:/app/public
+      # - ./frontend/app:/app/app
+      # - ./frontend/public:/app/public
+      # - './frontend/node_modules:/app/node_modules:cached'
+      - ./frontend:/app
     # volumes:
     #     - .:/app
     #     - /app/node_modules
     #     - /app/.next
     ports:
       - "3000:3000"
+    environment:
+      - NODE_ENV=development
 
   backend:
     build:
